--- a/.github/workflows/apple.yml
+++ b/.github/workflows/apple.yml
@@ -39,99 +39,99 @@ jobs:
       fail-fast: false
       matrix:
         build:
-          # macOS on Apple hardware. Can't do PGO because GitHub Apple hardware
-          # is Intel.
-          - target_triple: 'aarch64-apple-darwin'
-            py: 'cpython-3.8'
-            optimizations: 'debug'
-          - target_triple: 'aarch64-apple-darwin'
-            py: 'cpython-3.8'
-            optimizations: 'noopt'
-          - target_triple: 'aarch64-apple-darwin'
-            py: 'cpython-3.8'
-            optimizations: 'lto'
-
-          - target_triple: 'aarch64-apple-darwin'
-            py: 'cpython-3.9'
-            optimizations: 'debug'
-          - target_triple: 'aarch64-apple-darwin'
-            py: 'cpython-3.9'
-            optimizations: 'noopt'
-          - target_triple: 'aarch64-apple-darwin'
-            py: 'cpython-3.9'
-            optimizations: 'lto'
-
-          - target_triple: 'aarch64-apple-darwin'
-            py: 'cpython-3.10'
-            optimizations: 'debug'
-          - target_triple: 'aarch64-apple-darwin'
-            py: 'cpython-3.10'
-            optimizations: 'noopt'
-          - target_triple: 'aarch64-apple-darwin'
-            py: 'cpython-3.10'
-            optimizations: 'lto'
-
-          - target_triple: 'aarch64-apple-darwin'
-            py: 'cpython-3.11'
-            optimizations: 'debug'
-          - target_triple: 'aarch64-apple-darwin'
-            py: 'cpython-3.11'
-            optimizations: 'noopt'
-          - target_triple: 'aarch64-apple-darwin'
-            py: 'cpython-3.11'
-            optimizations: 'lto'
-
-          # macOS on Intel hardware. This is pretty straightforward. We exclude
-          # noopt because it doesn't provide any compelling advantages over PGO
-          # or LTO builds.
-          - target_triple: 'x86_64-apple-darwin'
-            py: 'cpython-3.8'
-            optimizations: 'debug'
-          - target_triple: 'x86_64-apple-darwin'
-            py: 'cpython-3.8'
-            optimizations: 'lto'
-          - target_triple: 'x86_64-apple-darwin'
-            py: 'cpython-3.8'
-            optimizations: 'pgo'
-          - target_triple: 'x86_64-apple-darwin'
-            py: 'cpython-3.8'
-            optimizations: 'pgo+lto'
-
-          - target_triple: 'x86_64-apple-darwin'
-            py: 'cpython-3.9'
-            optimizations: 'debug'
-          - target_triple: 'x86_64-apple-darwin'
-            py: 'cpython-3.9'
-            optimizations: 'lto'
-          - target_triple: 'x86_64-apple-darwin'
-            py: 'cpython-3.9'
-            optimizations: 'pgo'
-          - target_triple: 'x86_64-apple-darwin'
-            py: 'cpython-3.9'
-            optimizations: 'pgo+lto'
-
-          - target_triple: 'x86_64-apple-darwin'
-            py: 'cpython-3.10'
-            optimizations: 'debug'
-          - target_triple: 'x86_64-apple-darwin'
-            py: 'cpython-3.10'
-            optimizations: 'lto'
-          - target_triple: 'x86_64-apple-darwin'
-            py: 'cpython-3.10'
-            optimizations: 'pgo'
-          - target_triple: 'x86_64-apple-darwin'
-            py: 'cpython-3.10'
-            optimizations: 'pgo+lto'
-
-          - target_triple: 'x86_64-apple-darwin'
-            py: 'cpython-3.11'
-            optimizations: 'debug'
-          - target_triple: 'x86_64-apple-darwin'
-            py: 'cpython-3.11'
-            optimizations: 'lto'
-          - target_triple: 'x86_64-apple-darwin'
-            py: 'cpython-3.11'
-            optimizations: 'pgo'
+#          # macOS on Apple hardware. Can't do PGO because GitHub Apple hardware
+#          # is Intel.
+#          - target_triple: 'aarch64-apple-darwin'
+#            py: 'cpython-3.8'
+#            optimizations: 'debug'
+#          - target_triple: 'aarch64-apple-darwin'
+#            py: 'cpython-3.8'
+#            optimizations: 'noopt'
+#          - target_triple: 'aarch64-apple-darwin'
+#            py: 'cpython-3.8'
+#            optimizations: 'lto'
+#
+#          - target_triple: 'aarch64-apple-darwin'
+#            py: 'cpython-3.9'
+#            optimizations: 'debug'
+#          - target_triple: 'aarch64-apple-darwin'
+#            py: 'cpython-3.9'
+#            optimizations: 'noopt'
+#          - target_triple: 'aarch64-apple-darwin'
+#            py: 'cpython-3.9'
+#            optimizations: 'lto'
+#
+#          - target_triple: 'aarch64-apple-darwin'
+#            py: 'cpython-3.10'
+#            optimizations: 'debug'
+#          - target_triple: 'aarch64-apple-darwin'
+#            py: 'cpython-3.10'
+#            optimizations: 'noopt'
+#          - target_triple: 'aarch64-apple-darwin'
+#            py: 'cpython-3.10'
+#            optimizations: 'lto'
+#
+#          - target_triple: 'aarch64-apple-darwin'
+#            py: 'cpython-3.11'
+#            optimizations: 'debug'
+#          - target_triple: 'aarch64-apple-darwin'
+#            py: 'cpython-3.11'
+#            optimizations: 'noopt'
+#          - target_triple: 'aarch64-apple-darwin'
+#            py: 'cpython-3.11'
+#            optimizations: 'lto'
+#
+#          # macOS on Intel hardware. This is pretty straightforward. We exclude
+#          # noopt because it doesn't provide any compelling advantages over PGO
+#          # or LTO builds.
+#          - target_triple: 'x86_64-apple-darwin'
+#            py: 'cpython-3.8'
+#            optimizations: 'debug'
+#          - target_triple: 'x86_64-apple-darwin'
+#            py: 'cpython-3.8'
+#            optimizations: 'lto'
+#          - target_triple: 'x86_64-apple-darwin'
+#            py: 'cpython-3.8'
+#            optimizations: 'pgo'
+#          - target_triple: 'x86_64-apple-darwin'
+#            py: 'cpython-3.8'
+#            optimizations: 'pgo+lto'
+#
+#          - target_triple: 'x86_64-apple-darwin'
+#            py: 'cpython-3.9'
+#            optimizations: 'debug'
+#          - target_triple: 'x86_64-apple-darwin'
+#            py: 'cpython-3.9'
+#            optimizations: 'lto'
+#          - target_triple: 'x86_64-apple-darwin'
+#            py: 'cpython-3.9'
+#            optimizations: 'pgo'
+#          - target_triple: 'x86_64-apple-darwin'
+#            py: 'cpython-3.9'
+#            optimizations: 'pgo+lto'
+#
+#          - target_triple: 'x86_64-apple-darwin'
+#            py: 'cpython-3.10'
+#            optimizations: 'debug'
+#          - target_triple: 'x86_64-apple-darwin'
+#            py: 'cpython-3.10'
+#            optimizations: 'lto'
+#          - target_triple: 'x86_64-apple-darwin'
+#            py: 'cpython-3.10'
+#            optimizations: 'pgo'
+#          - target_triple: 'x86_64-apple-darwin'
+#            py: 'cpython-3.10'
+#            optimizations: 'pgo+lto'
+#
+#          - target_triple: 'x86_64-apple-darwin'
+#            py: 'cpython-3.11'
+#            optimizations: 'debug'
+#          - target_triple: 'x86_64-apple-darwin'
+#            py: 'cpython-3.11'
+#            optimizations: 'lto'
+#          - target_triple: 'x86_64-apple-darwin'
+#            py: 'cpython-3.11'
+#            optimizations: 'pgo'
           - target_triple: 'x86_64-apple-darwin'
             py: 'cpython-3.11'
             optimizations: 'pgo+lto'
