--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -39,15 +39,15 @@ jobs:
       fail-fast: false
       matrix:
         py:
-          - 'cpython-3.8'
-          - 'cpython-3.9'
-          - 'cpython-3.10'
+#          - 'cpython-3.8'
+#          - 'cpython-3.9'
+#          - 'cpython-3.10'
           - 'cpython-3.11'
         vcvars:
-          - 'vcvars32.bat'
+#          - 'vcvars32.bat'
           - 'vcvars64.bat'
         profile:
-          - 'static-noopt'
+#          - 'static-noopt'
           - 'shared-pgo'
     needs: pythonbuild
     runs-on: 'windows-2019'
