Enable some Python 3.10 builds and extra logging

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -253,9 +253,9 @@ jobs:
 #          - target_triple: 'i686-unknown-linux-gnu'
 #            py: 'cpython-3.10'
 #            optimizations: 'pgo'
-#          - target_triple: 'i686-unknown-linux-gnu'
-#            py: 'cpython-3.10'
-#            optimizations: 'pgo+lto'
+          - target_triple: 'i686-unknown-linux-gnu'
+            py: 'cpython-3.10'
+            optimizations: 'pgo+lto'
 #
 #          - target_triple: 'i686-unknown-linux-gnu'
 #            py: 'cpython-3.11'
@@ -287,9 +287,9 @@ jobs:
 #          - target_triple: 'mips-unknown-linux-gnu'
 #            py: 'cpython-3.10'
 #            optimizations: 'noopt'
-#          - target_triple: 'mips-unknown-linux-gnu'
-#            py: 'cpython-3.10'
-#            optimizations: 'lto'
+          - target_triple: 'mips-unknown-linux-gnu'
+            py: 'cpython-3.10'
+            optimizations: 'lto'
 #
 #          - target_triple: 'mips-unknown-linux-gnu'
 #            py: 'cpython-3.11'
@@ -318,9 +318,9 @@ jobs:
 #          - target_triple: 'mipsel-unknown-linux-gnu'
 #            py: 'cpython-3.10'
 #            optimizations: 'noopt'
-#          - target_triple: 'mipsel-unknown-linux-gnu'
-#            py: 'cpython-3.10'
-#            optimizations: 'lto'
+          - target_triple: 'mipsel-unknown-linux-gnu'
+            py: 'cpython-3.10'
+            optimizations: 'lto'
 #
 #          - target_triple: 'mipsel-unknown-linux-gnu'
 #            py: 'cpython-3.11'
